# habit-tracker

./: Dockerfile.app  Dockerfile.bot  README.MD  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  supervisord.app.conf  supervisord.bot.conf
alembic/: env.py
alembic/versions/: 56be38133650_initial_migration.py
bot/: loader.py  main.py
bot/auth_services/: api_client.py  auth_services.py
bot/config_data/: config.py
bot/flow/: auth_flow.py
bot/handlers/: __init__.py
bot/handlers/custom_handlers/: __init__.py  auth.py  habit_crud.py
bot/handlers/default_handlers/: __init__.py  echo.py  start.py
bot/redis/: redis_client.py  session_manager.py  state_manager.py
bot/scheduler_task/: scheduler.py  scheduler_func.py
bot/states/: states.py
bot/token_utils/: redis_client.py  session_manager.py
bot/user_interface/: keyboard.py
bot/utils/: habit_utils.py  set_bot_commands.py
web/: app.py  config_web.py  database.py  dependencies.py  models.py  schemas.py  security.py
web/routers/: auth.py  habit_service.py
